--- a/src/components/styles/CubeSpinner.scss
+++ b/src/components/styles/CubeSpinner.scss
@@ -90,8 +90,9 @@
       width: 100%;
       padding-top: 18%;
       padding-bottom: 18%;
-      margin-top: 500px;
-      position: absolute;
+      margin-top: 50px;
+      margin-bottom: 100px;
+      position: relative;
     }
   }
  
